<resources>
    <string name="app_name">TwoActivities</string>
    <string name="button_Main">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="editText_Main_Name">Enter Your Text Here</string>
    <string name="button_Second">Reply</string>
    <string name="editText_Second">Enter Your Reply Here</string>
    <string name="text_Header_Reply">Reply Received</string>
</resources>